# Discord-Games

./: .gitignore  ChessGame.py  LICENSE  README.md  __init__.py  connect_four.py  hangman.py  install.bat  main.py  pyproject.toml  requirements.txt  setup.py  test.bat  tictactoe.py  twenty_48.py
.github/workflows/: publish.yml
Discord_Games/: __init__.py  aki.py  aki_buttons.py  battleship.py  chess_game.py  connect_four.py  country_guess.py  hangman.py  reaction_test.py  rps.py  tictactoe.py  twenty_48.py  twenty_48_buttons.py  typeracer.py  utils.py  wordle.py  wordle_buttons.py
Discord_Games.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Discord_Games/BETA/: __init__.py
Discord_Games/button_games/: __init__.py  aki_buttons.py  battleship_buttons.py  chess_buttons.py  country_guess_buttons.py  hangman_buttons.py  lights_out.py  memory_game.py  number_slider.py  reaction_test_buttons.py  rps_buttons.py  tictactoe_buttons.py  twenty_48_buttons.py  wordle_buttons.py
discord_games/: __init__.py  aki.py  battleship.py  chess_game.py  connect_four.py  country_guess.py  hangman.py  reaction_test.py  rps.py  tetris.py  tictactoe.py  twenty_48.py  typeracer.py  utils.py  wordle.py
discord_games/button_games/: __init__.py  aki_buttons.py  battleship_buttons.py  boggle.py  chess_buttons.py  chimp_test.py  chimptest.py  connect_four_buttons.py  country_guess_buttons.py  hangman_buttons.py  lights_out.py  memory_game.py  number_memory.py  number_slider.py  reaction_test_buttons.py  (+5 more)
examples/: examples.py
tests/: __init__.py  __main__.py  requirements.txt  test_bot.py
